@@ -1,6 +1,7 @@
 ???? ??, 2012 - 5.0.2:
 
 Fixed bug  878: False positive: UnusedFormalParameter for abstract methods
+Fixed bug  913: SignatureDeclareThrowsException is raised twice
 Fixed bug 1012: False positive: Useless parentheses.
 Fixed bug 1026: PMD doesn't handle 'value =' in SuppressWarnings annotation
 Fixed bug 1037: Facing a showstopper issue in PMD Report Class (report listeners)
